tests/NormalTests/paczka1/small_fuzzy/61570503.err
Error in line 1: O9Ng33ajZxM S707 60,6
Error in line 12: UtADYDW02q A928 67,9
